--- a/Task4-F/India_flag.ipynb
+++ b/Task4-F/India_flag.ipynb
@@ -152,7 +152,7 @@
     "radius = 70\n",
     "color = (255, 0, 0)\n",
     "thickness = -1\n",
-    "flag = cv2.circle(cn, center_coordinates, radius, color, thickness)\n",
+    "flag = cv2.circle(flag, center_coordinates, radius, color, thickness)\n",
     "flag[205:215, :] = [255,255,255]\n",
     "flag[140:280, 345:355] = [255,255,255]\n",
     "cv2.imshow(\"india\", flag)\n",
